hphp/test/slow/clsmeth-nocompat/abstr-meth.php.expectf
Fatal error: Cannot call abstract method C::foo in %s/test/slow/clsmeth-nocompat/abstr-meth.php on line 9
